<resources>
    <string name="app_name">UnionGates</string>
    <string name="above_75000">Above 75000</string>
    <string name="_65000v_75000">65000v-75000</string>
    <string name="_55000_65000">55000 - 65000</string>
    <string name="_45000_55000">45000-55000</string>
    <string name="_35000_45000">35000 - 45000</string>
    <string name="_25000_35000">25000 - 35000</string>
    <string name="below_25000">Below 25000</string>
    <string name="select_yor_price_range">Select yor price range</string>
    <string name="add">ADD</string>
    <string name="your_frame_now_cost">Your Selected Frames Costs</string>
    <string name="your_gate_now_costs">Your Gate now costs</string>
    <string name="step_1_select_frame_of_your_choice"> SELECT A FRAME</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Mobile Number</string>
    <string name="cutomer_address">Customer Address</string>
    <string name="agent_name">Agent Name</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="refferd_agent_phone_optional">Referred Agent Phone(optional)</string>
    <string name="adhaar_number">Adhaar number</string>
    <string name="add_adhaar_images_both_sides">Add Adhaar images(both sides)</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_front_side_of_the_adhaar_card">Upload front side of the Adhaar card</string>
    <string name="upload_backside_of_adhaar_card">Upload backside of adhaar card</string>
    <string name="next">Next</string>
    <string name="account_not_activated">Account Not Activated</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="web_client_id">39756628611-8d0nc0sb7a8le5ofqh4r8vbk62oj9jco.apps.googleusercontent.com</string>
    <string name="visit_liberary">Visit Library</string>
    <string name="not_registerd_click_here_to_register">Not Registered?Click Here to Register</string>
    <string name="agent_phone_number">Agent phone number</string>
    <string name="account_number">Account Number</string>
    <string name="upload_photo">Upload photo</string>
    <string name="design">Design</string>
    <string name="go_to_liberary">Go to library</string>
    <string name="instead_you_can_go_to_the_liberary">Instead you can go to the Library.</string>
    <string name="design_your_own_gates">Design your own gates</string>
    <string name="add_customers_details">Add customers details</string>
    <string name="touch_on_the_number_to_select_a_panel_design">Touch on the number to select a panel design</string>
    <string name="congrates_your_order_placed_successfully">Congrats your order placed successfully</string>
    <string name="go_back">Go Back</string>
    <string name="change_language">ഭാഷ മാറ്റുക</string>
    <string name="gete_image">Gete Image</string>
    <string name="continue_to">Continue</string>
    <string name="buy">Buy</string>
    <string name="skip">Skip</string>
    <string name="sliderimages">Sliderimages</string>
    <string name="order_will_be_confirmed_only_on_psyment_of_advance">Order will be confirmed only on payment of advance</string>
    <string name="an_order_acceptance_message_will_be_sent_to_customer_number_and_your_number">An Order Acceptance message will be sent to Customer number and your number</string>
    <string name="sort">Sort</string>
    <string name="less_than_10000">less than 10000</string>
    <string name="_10000_20000">10000-20000</string>
    <string name="_20000_30000">20000-30000</string>
    <string name="_30000_40000">30000-40000</string>
    <string name="_40000_50000">40000-50000</string>
    <string name="_50000_60000">50000-60000</string>
    <string name="_60000_70000">60000-70000</string>
    <string name="filter">Filter</string>
    <string name="sorry_no_data_found">Sorry!.No data found</string>
    <string name="watch_vedio">Play video</string>
    <string name="save_design">Save Design</string>
    <string name="place_order">Place Order</string>
    <string name="alternative_phone_number">Alternative Phone Number</string>
    <string name="pin_code">Pin Code</string>
    <string name="the_otp_will_automatically_detect">The Otp will automatically detect in</string>
    <string name="resend">Resend</string>
    <string name="height">Height</string>
    <string name="gate_width">Gate Width</string>
    <string name="frame_inner">FRAME INNER</string>
    <string name="frame_outer">FRAME OUTER</string>
    <string name="inner">INNER</string>
    <string name="this_frame_costs">This Frame costs</string>
    <string name="frames_are_using_apollo_or_equivalent_bis_quality_gi_tubes_etch_primer_epoxy_primer_applied_as_under_coat_matt_black_nc_paint_applied_as_a_gift_extra_to_the_quote_hinges_and_locks_are_designed_for_effective_operation_hinges_are_provided_with_thrust_and_bi_metal_bush_bearings">Frames are using Apollo or equivalent BIS quality GI Tubes. Etch Primer + Epoxy primer applied as under coat. Matt Black NC paint applied as a GIFT extra to the Quote. Hinges and locks are designed for effective operation. Hinges are provided with Thrust and Bi Metal Bush Bearings</string>
    <string name="show_me_the_nfull_gate_pictre">Show me the\nFull gate pictre</string>
    <string name="view_full_gate">View Full Gate</string>
    <string name="ifsc_code">Ifsc Code</string>
    <string-array name="measurement_type">
        <item>cm</item>
        <item>inch</item>
        <item>feet</item>
        <item>m</item>

    </string-array>
    <string name="caution_text">This cost includes delivery at site.
No other charges extra .Painting &amp; Erection not included.
Unloading at site in your scope</string>
    <string name="before_proceeding_to_next_page">Before proceeding to next page</string>
    <string name="yes_proceed">Yes. Proceed</string>
    <string name="about">About us</string>
    <string name="exit">Exit</string>
</resources>